other plugins spacing issue fixed

--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -1475,7 +1475,9 @@ p.first.admonition-title {
 p.last {
   padding-bottom: 10px!important;
 }
-
+#other-plugins blockquote {
+  margin: 0px;
+}
 
 
 @media only screen and (min-width: 250px) {
